--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -361,8 +361,8 @@
   },
   "sidebar": {
     "biv_color_manager": "Сolor manager",
-    "edit_osm": "Edit in OpenStreetMap",
-    "ruler": "Ruler",
+    "edit_osm": "Edit map in OpenStreetMap",
+    "ruler": "Measure distance",
     "collapse": "Collapse",
     "expand": "Expand",
     "icon_alt": "Application logo"
