--- a/src/core/localization/gettext/template/common.pot
+++ b/src/core/localization/gettext/template/common.pot
@@ -124,7 +124,6 @@ msgid "Upload GeoJSON"
 msgstr ""
 
 #: toolbar##focused_geometry_editor
-#: focus_geometry##title
 msgid "Draw or edit geometry"
 msgstr ""
 
@@ -603,10 +602,6 @@ msgstr ""
 msgid "Compare"
 msgstr ""
 
-#: multivariate##score_and_compare
-msgid "Score and compare"
-msgstr ""
-
 #: multivariate##hide_area
 msgid "Hide area"
 msgstr ""
@@ -617,10 +612,6 @@ msgstr ""
 
 #: multivariate##3d
 msgid "3D"
-msgstr ""
-
-#: multivariate##static_opacity
-msgid "Static opacity"
 msgstr ""
 
 #: map_popup##value
@@ -936,15 +927,19 @@ msgid "Polygon should not overlap itself"
 msgstr ""
 
 #: boundary_selector##title
-msgid "Select administrative boundary"
+msgid "Focus to administrative boundary"
 msgstr ""
 
 #: geometry_uploader##title
-msgid "Uploaded selected area as a GeoJSON file"
+msgid "Focus to uploaded geometry"
 msgstr ""
 
 #: geometry_uploader##error
 msgid "Error while reading uploaded file"
+msgstr ""
+
+#: focus_geometry##title
+msgid "Focus to freehand geometry"
 msgstr ""
 
 #: reference_area_layer##settings##name
