test(layer-features-panel): cover empty state messages

--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -1607,7 +1607,7 @@ msgid "Your device does not have the required sensors"
 msgstr "Вашае прылада не мае неабходных датчыкаў"
 
 #: layer_features_panel##empty
-msgid "Layer features within selected area will be provided here"
+msgid "Layer features in selected area will be provided here"
 msgstr "Аб'екты слоя ў вылучанай вобласці будуць паказаны тут"
 
 #: layer_features_panel##noFeatureSelected
@@ -1630,7 +1630,7 @@ msgstr ""
 "раз."
 
 #: layer_features_panel##no_features
-msgid "No features found in the selected area."
+msgid "No layer features in selected area"
 msgstr "У вылучанай вобласці не знойдзена аб'ектаў."
 
 #: layer_features_panel##priority
