feat(layers): add zoom control for focused and reference areas

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -42,7 +42,8 @@
       "edit": "Edit",
       "hide": "Hide",
       "show": "Show",
-      "delete": "Delete"
+      "delete": "Delete",
+      "zoom_to": "Zoom to"
     }
   },
   "feed": "Feed",
