--- a/src/core/localization/gettext/de/common.po
+++ b/src/core/localization/gettext/de/common.po
@@ -1346,10 +1346,9 @@ msgstr ""
 msgid "Imagery catalog"
 msgstr "Bild"
 
-#: modes##new_analysis new_analysis##title
-#, fuzzy
+#: modes##new_analysis new_analysis_page##title
 msgid "New analysis"
-msgstr "Erweiterte Analytik"
+msgstr "Neue Analyse"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1669,31 +1668,29 @@ msgstr ""
 msgid "Login with Google"
 msgstr ""
 
-#: new_analysis##heading
+#: new_analysis_page##heading
 msgid "Ask ✨ AI your spatial question"
-msgstr ""
+msgstr "Stelle ✨ der KI deine räumliche Frage"
 
-#: new_analysis##description
+#: new_analysis_page##description
 msgid "AI will pick from 200+ layers and build a tailored analysis."
-msgstr ""
+msgstr "Die KI wählt aus über 200 Layern und erstellt eine passende Analyse."
 
-#: new_analysis##generate_button
-#, fuzzy
+#: new_analysis_page##generate_button
 msgid "Generate analysis"
-msgstr "Ebene erstellen"
+msgstr "Analyse erzeugen"
 
-#: new_analysis##try_map_link
+#: new_analysis_page##try_map_link
 msgid "Try map by yourself"
-msgstr ""
+msgstr "Karte selbst ausprobieren"
 
-#: new_analysis##ai_generating
+#: new_analysis_page##ai_generating
 msgid "AI is generating your analysis. It takes time"
-msgstr ""
+msgstr "Die KI erstellt deine Analyse. Das dauert etwas"
 
-#: new_analysis##generated_analysis
-#, fuzzy
+#: new_analysis_page##generated_analysis
 msgid "Generated analysis \"{{name}}\""
-msgstr "Ebene erstellen"
+msgstr "Erstellte Analyse „{{name}}“"
 
 #~ msgid "Focus to administrative boundary"
 #~ msgstr "Fokus auf die Verwaltungsgrenze"
