--- a/src/core/localization/gettext/es/common.po
+++ b/src/core/localization/gettext/es/common.po
@@ -1344,10 +1344,9 @@ msgstr ""
 msgid "Imagery catalog"
 msgstr "Imagen"
 
-#: modes##new_analysis new_analysis##title
-#, fuzzy
+#: modes##new_analysis new_analysis_page##title
 msgid "New analysis"
-msgstr "Análisis avanzado"
+msgstr "Nuevo análisis"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1668,31 +1667,29 @@ msgstr ""
 msgid "Login with Google"
 msgstr ""
 
-#: new_analysis##heading
+#: new_analysis_page##heading
 msgid "Ask ✨ AI your spatial question"
-msgstr ""
+msgstr "Pregunta a ✨ la IA tu duda espacial"
 
-#: new_analysis##description
+#: new_analysis_page##description
 msgid "AI will pick from 200+ layers and build a tailored analysis."
-msgstr ""
+msgstr "La IA elegirá entre más de 200 capas y creará un análisis a medida."
 
-#: new_analysis##generate_button
-#, fuzzy
+#: new_analysis_page##generate_button
 msgid "Generate analysis"
-msgstr "Crear capa"
+msgstr "Generar análisis"
 
-#: new_analysis##try_map_link
+#: new_analysis_page##try_map_link
 msgid "Try map by yourself"
-msgstr ""
+msgstr "Prueba el mapa por tu cuenta"
 
-#: new_analysis##ai_generating
+#: new_analysis_page##ai_generating
 msgid "AI is generating your analysis. It takes time"
-msgstr ""
+msgstr "La IA está generando tu análisis. Esto toma tiempo"
 
-#: new_analysis##generated_analysis
-#, fuzzy
+#: new_analysis_page##generated_analysis
 msgid "Generated analysis \"{{name}}\""
-msgstr "Crear capa"
+msgstr "Análisis generado \"{{name}}\""
 
 #~ msgid "Focus to administrative boundary"
 #~ msgstr "Enfocar en el límite administrativo"
