--- a/src/core/localization/gettext/id/common.po
+++ b/src/core/localization/gettext/id/common.po
@@ -1341,10 +1341,9 @@ msgstr ""
 msgid "Imagery catalog"
 msgstr "Gambar"
 
-#: modes##new_analysis new_analysis##title
-#, fuzzy
+#: modes##new_analysis new_analysis_page##title
 msgid "New analysis"
-msgstr "Analitik tingkat lanjut"
+msgstr "Analisis baru"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1664,31 +1663,29 @@ msgstr ""
 msgid "Login with Google"
 msgstr ""
 
-#: new_analysis##heading
+#: new_analysis_page##heading
 msgid "Ask ✨ AI your spatial question"
-msgstr ""
+msgstr "Tanyakan ✨ AI pertanyaan spasial Anda"
 
-#: new_analysis##description
+#: new_analysis_page##description
 msgid "AI will pick from 200+ layers and build a tailored analysis."
-msgstr ""
+msgstr "AI akan memilih dari lebih dari 200 layer dan membuat analisis yang sesuai."
 
-#: new_analysis##generate_button
-#, fuzzy
+#: new_analysis_page##generate_button
 msgid "Generate analysis"
-msgstr "Buat Lapisan"
+msgstr "Hasilkan analisis"
 
-#: new_analysis##try_map_link
+#: new_analysis_page##try_map_link
 msgid "Try map by yourself"
-msgstr ""
+msgstr "Coba peta sendiri"
 
-#: new_analysis##ai_generating
+#: new_analysis_page##ai_generating
 msgid "AI is generating your analysis. It takes time"
-msgstr ""
+msgstr "AI sedang membuat analisis Anda. Ini memerlukan waktu"
 
-#: new_analysis##generated_analysis
-#, fuzzy
+#: new_analysis_page##generated_analysis
 msgid "Generated analysis \"{{name}}\""
-msgstr "Buat Lapisan"
+msgstr "Analisis yang dihasilkan \"{{name}}\""
 
 #~ msgid "Focus to administrative boundary"
 #~ msgstr "Fokus ke batas administratif"
