--- a/src/core/localization/gettext/ko/common.po
+++ b/src/core/localization/gettext/ko/common.po
@@ -631,33 +631,31 @@ msgstr ""
 
 #: multivariate##compare
 msgid "Compare"
-msgstr ""
+msgstr "비교"
 
 #: multivariate##score_and_compare
 msgid "Score and compare"
-msgstr ""
+msgstr "점수 및 비교"
 
 #: multivariate##hide_area
 msgid "Hide area"
-msgstr ""
+msgstr "영역 숨기기"
 
 #: multivariate##labels
 msgid "Labels"
-msgstr ""
+msgstr "레이블"
 
 #: multivariate##3d
 msgid "3D"
-msgstr ""
+msgstr "3D"
 
 #: multivariate##static_opacity
 msgid "Static opacity"
-msgstr ""
+msgstr "정적 불투명도"
 
 #: multivariate##mcda_legend_subtitle
-msgid ""
-"Hexagons are colored as weighted average of normalized and transformed "
-"layers values"
-msgstr ""
+msgid "Hexagons are colored as weighted average of normalized and transformed layers values"
+msgstr "육각형은 정규화되고 변환된 레이어 값의 가중 평균으로 색이 지정됩니다"
 
 #: map_popup##value
 #, fuzzy
@@ -1339,10 +1337,9 @@ msgstr ""
 msgid "Imagery catalog"
 msgstr "이미지"
 
-#: modes##new_analysis new_analysis##title
-#, fuzzy
+#: modes##new_analysis new_analysis_page##title
 msgid "New analysis"
-msgstr "고급 분석"
+msgstr "새 분석"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1663,31 +1660,29 @@ msgstr ""
 msgid "Login with Google"
 msgstr ""
 
-#: new_analysis##heading
+#: new_analysis_page##heading
 msgid "Ask ✨ AI your spatial question"
-msgstr ""
+msgstr "✨ AI에게 공간에 대한 질문을 해보세요"
 
-#: new_analysis##description
+#: new_analysis_page##description
 msgid "AI will pick from 200+ layers and build a tailored analysis."
-msgstr ""
+msgstr "AI가 200개 이상의 레이어 중에서 선택해 맞춤형 분석을 만들어 줍니다."
 
-#: new_analysis##generate_button
-#, fuzzy
+#: new_analysis_page##generate_button
 msgid "Generate analysis"
-msgstr "레이어 생성"
+msgstr "분석 생성"
 
-#: new_analysis##try_map_link
+#: new_analysis_page##try_map_link
 msgid "Try map by yourself"
-msgstr ""
+msgstr "지도를 직접 사용해 보기"
 
-#: new_analysis##ai_generating
+#: new_analysis_page##ai_generating
 msgid "AI is generating your analysis. It takes time"
-msgstr ""
+msgstr "AI가 분석을 생성 중입니다. 시간이 조금 걸립니다"
 
-#: new_analysis##generated_analysis
-#, fuzzy
+#: new_analysis_page##generated_analysis
 msgid "Generated analysis \"{{name}}\""
-msgstr "레이어 생성"
+msgstr "생성된 분석 \"{{name}}\""
 
 #~ msgid "Focus to administrative boundary"
 #~ msgstr "행정 경계에 초점 맞추기"
