--- a/src/core/localization/gettext/ru/common.po
+++ b/src/core/localization/gettext/ru/common.po
@@ -625,7 +625,7 @@ msgstr "Сравнение"
 
 #: multivariate##score_and_compare
 msgid "Score and compare"
-msgstr ""
+msgstr "Оценка и сравнение"
 
 #: multivariate##hide_area
 msgid "Hide area"
@@ -641,13 +641,11 @@ msgstr "3D"
 
 #: multivariate##static_opacity
 msgid "Static opacity"
-msgstr ""
+msgstr "Статическая непрозрачность"
 
 #: multivariate##mcda_legend_subtitle
-msgid ""
-"Hexagons are colored as weighted average of normalized and transformed "
-"layers values"
-msgstr ""
+msgid "Hexagons are colored as weighted average of normalized and transformed layers values"
+msgstr "Шестиугольники окрашены как взвешенное среднее нормализованных и преобразованных значений слоёв"
 
 #: map_popup##value
 msgid "Value"
@@ -1316,10 +1314,9 @@ msgstr "Загрузить изображение"
 msgid "Imagery catalog"
 msgstr "Каталог изображений"
 
-#: modes##new_analysis new_analysis##title
-#, fuzzy
+#: modes##new_analysis new_analysis_page##title
 msgid "New analysis"
-msgstr "Сохранить анализ"
+msgstr "Новый анализ"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1650,32 +1647,29 @@ msgstr "Выбранная область сохранена как эталон
 msgid "Login with Google"
 msgstr "Войти через Google"
 
-#: new_analysis##heading
+#: new_analysis_page##heading
 msgid "Ask ✨ AI your spatial question"
-msgstr ""
+msgstr "Задайте ✨ ИИ свой пространственный вопрос"
 
-#: new_analysis##description
+#: new_analysis_page##description
 msgid "AI will pick from 200+ layers and build a tailored analysis."
-msgstr ""
+msgstr "ИИ выберет из более чем 200 слоёв и построит подходящий анализ."
 
-#: new_analysis##generate_button
-#, fuzzy
+#: new_analysis_page##generate_button
 msgid "Generate analysis"
-msgstr "Создать анализ"
+msgstr "Сгенерировать анализ"
 
-#: new_analysis##try_map_link
+#: new_analysis_page##try_map_link
 msgid "Try map by yourself"
-msgstr ""
+msgstr "Попробуйте карту самостоятельно"
 
-#: new_analysis##ai_generating
-#, fuzzy
+#: new_analysis_page##ai_generating
 msgid "AI is generating your analysis. It takes time"
-msgstr "AI создаёт анализ для вас"
+msgstr "ИИ создаёт ваш анализ. Это занимает время"
 
-#: new_analysis##generated_analysis
-#, fuzzy
+#: new_analysis_page##generated_analysis
 msgid "Generated analysis \"{{name}}\""
-msgstr "Создать анализ слоёв"
+msgstr "Сгенерированный анализ \"{{name}}\""
 
 #~ msgid "Upload MCDA"
 #~ msgstr "Загрузить анализ"
