fix(create_layer): rename field type labels

--- a/src/core/localization/gettext/be/common.po
+++ b/src/core/localization/gettext/be/common.po
@@ -818,12 +818,12 @@ msgstr "Тып"
 msgid "Select"
 msgstr "Выбраць"
 
-#: create_layer##short_text
-msgid "Short Text"
+#: create_layer##single_line_text
+msgid "Single-line text"
 msgstr "Кароткі тэкст"
 
-#: create_layer##long_text
-msgid "Long Text"
+#: create_layer##multi_line_text
+msgid "Multi-line text"
 msgstr "Доўгі тэкст"
 
 #: create_layer##link
