--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -242,8 +242,8 @@
     "marker_icon": "Marker icon",
     "type": "Type",
     "select": "Select",
-    "short_text": "Short Text",
-    "long_text": "Long Text",
+    "single_line_text": "Single-line text",
+    "multi_line_text": "Multi-line text",
     "link": "Link",
     "image": "Image",
     "fields": "Fields",
